# perso-2026a-ODiogorocha

./: .gitignore  Dockerfile  README.md  pokemon-analizer.cabal  pokemon-analyzer.cabal  reder.yml  render.yaml  render.yml  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/2eb11aa5/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6-libc6-pre232/e481cb8b32c8d406e64f360f892315fe7d9ced0ccd616da93d5719e20643dc12/9.6.6/pkgdb/: package.cache  pokemon-analyzer-0.1.0.0-8oaBGJpwiNaF1zLNEdDNHp.conf
extra_deps/: .gitignore
módulos/: stack.yaml
pokemon_analyzer/: Dockerfile  frontend.html  pokemon-analyzer.cabal  stack.yaml
pokemon_analyzer/src/: Api.hs  Logic.hs  Main.hs
pokemon_analyzer/test/: Spec.hs
src/: Logic.hs  Types.hs
test/: Spec.hs
