cabal-version:      3.0
name:               pokemon-analyzer
version:            0.1.0.0
synopsis:           Competitive Pokemon type analyzer backend
license:            MIT
author:             nome
maintainer:         email@example.com
build-type:         Simple

library
  exposed-modules:
      Types
    , Logic
    , Api
    , Response
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base          >= 4.14 && < 5
    , aeson         >= 2.0
    , text          >= 1.2
    , bytestring    >= 0.10
    , http-conduit  >= 2.3
    , http-client   >= 0.7
    , http-client-tls >= 0.3
    , containers    >= 0.6

executable pokemon-analyzer-exe
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base          >= 4.14 && < 5
    , pokemon-analyzer
    , scotty        >= 0.12
    , aeson         >= 2.0
    , text          >= 1.2
    , bytestring    >= 0.10
    , warp          >= 3.3

test-suite pokemon-analyzer-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base          >= 4.14 && < 5
    , pokemon-analyzer
    , HUnit         >= 1.6
    , aeson         >= 2.0
    , text          >= 1.2