cabal-version: 2.0
name:          pokemon-analyzer
version:       0.1.0.0
license:       MIT
build-type:    Simple

library
  exposed-modules:  Types, Logic, Api
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5,
                    aeson >=2.0,
                    text >=1.2,
                    containers >=0.6,
                    http-conduit >=2.3,
                    bytestring >=0.10,
                    transformers >=0.5,
                    http-types >=0.12,
                    vector >=0.12
  default-language: Haskell2010
  ghc-options:      -Wall

executable pokemon-analyzer-exe
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base,
                    pokemon-analyzer,
                    scotty >=0.20,
                    aeson,
                    text,
                    http-conduit,
                    bytestring,
                    transformers,
                    http-types,
                    wai-cors >=0.2,
                    vector
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite pokemon-analyzer-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base,
                    pokemon-analyzer,
                    HUnit >=1.6,
                    aeson,
                    bytestring,
                    text,
                    containers
  default-language: Haskell2010
  ghc-options:      -Wall
